9章課題問題

--- a/ch9_exercise.html
+++ b/ch9_exercise.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>9章演習問題</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/2a4c24875b.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="ch9_exercise.css">
 </head>
